# python-project-83

./: .env_example  .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  repo.py
.github/workflows/: my-check.yml
page_analyzer/: __init__.py  app.py  crud.py  crud_class.py  db.py  page_data.py  validator.py  validator_db.py
page_analyzer/templates/: 404.html  500.html  index.html  layout.html  show.html  urls.html
